--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
     flex-direction: column;
-    background: transparent; /* Make it white if you need */
+    background: #15222E;
     color: #fcbe24;
     padding: 0 24px;
     margin: 0;
