feat - add bib39-dotmap words

--- a/src/style.css
+++ b/src/style.css
@@ -31,4 +31,7 @@ body {
     display: flex;
     justify-content: space-around;
   }
-  
+  input#word {
+    font-weight: bold;
+      text-align: center;
+  }
