--- a/src/style.css
+++ b/src/style.css
@@ -4,34 +4,64 @@ body {
     color: #fcbe24;
     padding: 0 24px;
     margin: 0;
-    height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  
-  h1 {
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1 {
     margin-bottom: 50px;
-  }
-  
-  table {
+}
+
+h3 {
+    margin-top: 50px;
+}
+
+table {
     width: 100%;
-     max-width: 800px;
+    max-width: 800px;
     border-collapse: collapse;
-  }
-  th,
-  td {
+}
+th,
+td {
     border: 1px solid black;
     padding: 10px;
     text-align: center;
-  }
-  .checkbox-group {
+    vertical-align: top;
+}
+.checkbox-group {
     display: flex;
     justify-content: space-around;
-  }
-  input#word {
+}
+input#word {
     font-weight: bold;
-      text-align: center;
-  }
+    text-align: center;
+}
+
+textarea#seed {
+    font-weight: bold;
+    width: 100%;
+    height: 80px;
+    box-sizing: border-box;
+}
+.color-box {
+     height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    margin: 5px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.color-input {
+    text-align: center;
+    border: none;
+    font-weight: bold;
+}
+
+#colorCell {
+    width: 300px;
+}
